--- a/LECTURE18.Rmd
+++ b/LECTURE18.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Final class review"
 author: "NRES 470/670"
-date: "Spring 2020"
+date: "Spring 2021"
 output: 
   html_document: 
     theme: spacelab
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming final exam
 
-**when and where** The final exam is coming up on Friday **May 8** (9:50am to 11:50). You will have the whole two hour period to take the exam (but you should not need the whole period). 
+**when and where** The final exam is coming up on Friday **May 7** (9:50am to 11:50). You will have the whole two hour period to take the exam (but you should not need the whole period). 
 
 **what** The exam will cover all material covered in lectures and lab.
 
@@ -32,9 +32,11 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 - *Stochasticity and Uncertainty* ([lecture](LECTURE8.html), [lab](LAB5.html), suggested readings: [Lande 1992](lande.pdf); [Regan 2002](Regan_2002.pdf).
 - *Small-population paradigm and declining-population paradigm* ([lecture](LECTURE9.html), [lecture](LECTURE11.html), suggested reading: [Caughley 1988](caughley1.pdf))  
 - *Population Viability Analysis*, in theory and practice ([lecture](LECTURE12.html), suggested reading [Beissinger and Westphal 1998](beissinger1.pdf), [optional lecture](LECTURE14.html))
-- *Parameter estimation for PVA*, including basic capture-recapture methods ([lecture](LECTURE15.html), suggested reading: [Amstrup et al](amstrup1.pdf))
+
 
 NOTE: we skipped over the [lecture on individual-based models](LECTURE10.html)- this topic will (of course) *not be included on the final exam*
+
+NOTE: we skipped over the *Parameter estimation for PVA*, including basic capture-recapture methods ([lecture](LECTURE15.html)) - this topic will (of course) *not be included on the final exam*
 
 *The exam will consist of a mixture of multiple-choice and short-answer questions (including a few definitions).*
 
@@ -42,12 +44,12 @@ NOTE: we skipped over the [lecture on individual-based models](LECTURE10.html)- 
 
 #### Final exam
 
-- This Friday, May 8 from 9:50-11:50 (via zoom/tophat)
+- This Friday, May 7 from 9:50-11:50 (via zoom/tophat)
 
 #### Final papers
 
 - Everyone should have received detailed feedback over the weekend - please let us know if you have any questions. 
-- Final papers due May 13 at 5pm (webcampus submission)
+- Final papers due May 12 at 5pm (webcampus submission)
 
 #### Extra credit
 
@@ -57,7 +59,7 @@ NOTE: we skipped over the [lecture on individual-based models](LECTURE10.html)- 
 
 #### Office hours/Study session
 
-- Wed 5/6 at 10am via zoom (regular class time, zoom link sent via email and webcampus announcement)
+- Wed 5/5 at 10am via zoom (regular class time)
 
 #### PLEASE fill out your course evaluations!
 
