--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -33,8 +33,8 @@ Students will work in groups of ~3-4 people to perform a population viability an
 
 - **PROPOSAL:** Due Fri March 12!
 - **INITIAL PVA** Due Fri April 9: description of how your PVA model works and where the parameter estimates come from.
-- **SEND DRAFT FOR PEER REVIEW** Due April 19 by midnight (for peer review on April 23)
-- **DRAFT FINAL PAPER:** Due Wed April 28
+- **SEND DRAFT FOR PEER REVIEW** Due April 21 by 5pm (for peer review on April 23)
+- **DRAFT FINAL PAPER:** Due Wed April 28 by 5pm
 - **FINAL FINAL PAPER:** Due Wed May 12
 - **FINAL PRESENTATIONS:** Fri Apr 23 and Fri April 30 in lab!
 
@@ -118,13 +118,13 @@ A rubric for the presentations can be found [here](presentationProject_rubric.do
 
 ## Final paper peer review/feedback session
 
-In lab on Fri Apr 24 we will have a "peer review" session where we will have a chance to give each other feedback on draft manuscripts. 
+In lab on Fri Apr 23 we will have a "peer review" session where we will have a chance to give each other feedback on draft manuscripts. 
 
 The way it will work is as follows:
 
-1. By mid-day on April 22 (Wed), you will receive another group's draft manuscript via WebCampus (see list below). 
+1. By the end of the day on April 21 (Wed), you will receive another group's draft manuscript via WebCampus (see list below). 
 
-2. Before lab, please throroughly read the manuscript you have been assigned, and make comments, paying particular attention to the [grading rubric](WrittenProject_rubric.docx). 
+2. Before lab, please thoroughly read the manuscript you have been assigned, and make comments, paying particular attention to the [grading rubric](WrittenProject_rubric.docx). 
 
 3. During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 30 minutes to compare notes and prepare a written "peer review" of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! *Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA*
 
