--- a/index.Rmd
+++ b/index.Rmd
@@ -13,23 +13,21 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
 
-**Instructor:** Kevin Shoemaker 
+**Instructor:** Kevin Shoemaker    
 **Office:** Fleischmann Agriculture, room 220e  
-**Phone:** 775-682-7449  
-**Email**: kevinshoemaker_at_unr_dot_edu
-**Office hours**: Wed 3pm in FA 220e
-**Course Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	
+**Phone:** 775-682-7449     
+**Email**: kevinshoemaker_at_unr_dot_edu        
+**Office hours**: Wed 3pm in FA 220e         
+**Course Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	    
  
-**Teaching Assistant** Margarete Walden (mwalden_at_nevada_dot_unr_dot_edu)     
-**TA Office hours**: TBD (check website for updates)
+**Teaching Assistant** Margarete Walden (mwalden_dot_unr_dot_edu)          
+**TA Office hours**: TBD (check website for updates)       
 
 ### Course Meeting Times
 
-**Lecture & Discussion**: M, W at 10am (50 mins) in AB 213    
-**Lab**: F at 1pm (2 hrs 45 mins) in FA 301  
+**Lecture & Discussion**: M, W at 10am (50 mins) in AB 213         
+**Lab**: F at 1pm (2 hrs 45 mins) in FA 301      
     
-- Walden: TBD    
-
 ### Course description  
 This class will explore how concepts of population ecology can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management using simulation models and statistics. Topics will include population viability analysis (PVA), habitat suitability models, metapopulation models, competition and predation models, threats to population viability, wildlife population management and more. Laboratory exercises will provide students with hands-on experience with population models and their practical applications in the conservation and management of wild populations.
 
