--- a/index.Rmd
+++ b/index.Rmd
@@ -85,17 +85,16 @@ Graduate students will be subject to additional expectations in order to receive
 Missed exams and labs cannot be made up, except in the case of emergencies. If you miss a class meeting, it is your responsibility to talk to one of your classmates about what you missed. If you miss a lab meeting, you are still responsible for completing the lab activities and write-up on your own time. Whenever possible, please let me know in advance if you are going to miss class or lab.
 
 ### Top Hat
-We will be using the [Top Hat](www.tophat.com) classroom response system in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.  
+We will be using the [Top Hat](www.tophat.com) interactive learning platform in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.  
 
 You can visit the Top Hat Overview (https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide) within the Top Hat Success Center which outlines how you will register for a Top Hat account, as well as providing a brief overview to get you up and running on the system.
 
 An invitation will be sent to you by email, but if you don’t receive this email, you can register by simply visiting our course website: [https://app.tophat.com/e/809153](https://app.tophat.com/e/809153)       
-
 Note: our Course Join Code is 809153
 
 Top Hat may require a paid subscription, and a full breakdown of all subscription options available can be found here: [www.tophat.com/pricing](www.tophat.com/pricing). 
 
-Should you require assistance with Top Hat at any time, due to the fact that they require specific user information to troubleshoot these issues, please contact their Support Team directly by way of email ([support@tophat.com](support@tophat.com)), the in app support button, or by calling 1-888-663-5491.
+Should you require assistance with Top Hat at any time, due to the fact that they require specific user information to troubleshoot these issues, please contact their Support Team directly by way of email ([support@tophat.com](support@tophat.com)), the in-app support button, or by calling 1-888-663-5491.
 
 ### Students with Disabilities
 Any student with a disability needing academic adjustments or accommodations is requested to speak with the Disability Resource Center (Thompson Building, Suite 101) as soon as possible to arrange for appropriate accommodations.
